<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Blue"
    android:weightSum="8"
    tools:context="com.example.a1.Edits">


    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="45dp"
                android:hint="@string/Adr"
                android:textColor="@color/black"
                android:textColorHint="@color/Gris"
                android:background="@drawable/round_edit"
                android:paddingLeft="20dp"
                android:id="@+id/mod_mail"
                android:layout_margin="10dp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:hint="@string/Phone"
                android:textColorHint="@color/Gris"
                android:layout_margin="10dp"
                android:paddingLeft="10dp"
                android:id="@+id/mod_phone"
                android:background="@drawable/round_edit"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/editb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/Blue"
                android:src="@drawable/edit"></ImageButton>


            <ImageButton
                android:id="@+id/dellb"
                android:layout_width="217dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/Blue"
                android:src="@drawable/delete"></ImageButton>


        </LinearLayout>


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/APP"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold">
    </TextView>


</LinearLayout>